tests/vrs/methods/methods_05_arguments_no_types_expected.txt
error: expected `:`, found `)`
     --> tests/vrs/methods/methods_05_arguments_no_types.vrs:3:15
      |
    3 |      fn foo(bar) -> bool
      |                ^ help: add `:` here.
